# software-landscape-analysis

./: .codespell-ignore  .htmllintrc  .pre-commit-config.yaml  CITATION.cff  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yaml  pre-commit-checks.yml
cytomining-ecosystem/: index.html  report.html
docs/: index.html
docs/css/: style.css
docs/cytomining-ecosystem/: index.html  report.html  target-project-dependents.html  target-project-report.html
docs/cytomining-ecosystem/cytomining-ecosystem/: report.html
docs/reports/cytomining-ecosystem/: cytomining-ecosystem-relevant-open-source.html  index.html  maturity.html  microscopy-analysis-tools.html  report.html
notebooks/cytomining-ecosystem/: gather-targeted-github-data.ipynb  gather-targeted-github-data.py  gather-targeted-package-metrics.ipynb  gather-targeted-package-metrics.py  gather-targeted-publication-mentions.ipynb  gather-targeted-publication-mentions.py  project-git-metrics.ipynb  project-git-metrics.py  project-github-metrics.ipynb  project-github-metrics.py  seek-landscape-entries.ipynb  seek-landscape-entries.py  visualize-landscape-fall-2023.py  visualize-landscape.ipynb  visualize-landscape.py  visualize-target-projects-fall-2023.py
notebooks/cytomining-ecosystem/data/: loi-target-project-github-metrics.parquet  loi-target-project-package-metrics.parquet  loi-target-project-publication-metrics.parquet  project-github-metrics.parquet  projects.yaml  queries.yaml  scRNA-Tools-tableExport-2023-10-12.csv  target-projects.yaml
notebooks/czi-eoss-cycle-6/: project-git-metrics.ipynb  project-git-metrics.py  seek-landscape-entries.ipynb  seek-landscape-entries.py
notebooks/czi-eoss-cycle-6/data/: projects.yaml
