[tool.poetry]
name = "landscape-analysis"
version = "0.0.1"
description = "Enabling landscape analysis to better understand existing efforts or solutions."
authors = ["Way Science community"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
# pandas dependency notes:
# >=2.0.0,<3.0.0 required by github-dependents-info
# >1.1,<1.4.0 required by condastats
# ">1.1,<1.4.0 || >1.4.0,<2.1" required by  ydata-profiling
# these requirements are configured where needed in the poethepoet
# workflow below but may need manual handling for proper
# development within jupyter
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.16.0,<1.26"
matplotlib = ">=3.2,<=3.7.3"
plotly = "^5.17.0"
duckdb = "^0.9.0"
requests = "^2.31.0"
pygithub = "^2.1.1"
python-box = "^7.1.1"
pytz = "^2023.3.post1"
poetry = "^1.7.1"
poethepoet = "^0.24.1"
pyarrow = ">=14.0.0"
pyppeteer = "^1.0.2"
nest-asyncio = "^1.5.8"
htmlmin = "^0.1.12"
ydata-profiling = "^4.6.0"
ipywidgets = "^8.1.1"
itables = "^1.6.2"
scholarly = "^1.7.11"
biorxiv-retriever = "^0.20.1"
awkward = "^2.4.10"
thefuzz = "^0.20.0"
fsspec = "^2023.10.0"
pypinfo = "^21.0.0"
intake = "^0.7.0"
intake-parquet = "^0.3.0"
aiohttp = "^3.8.6"
s3fs = "^2023.10.0"
condastats = "^0.2.1"
github-dependents-info = "^1.2.0"
google-cloud-bigquery = "^3.13.0"
pyvis = "0.3.1"
netwulf = "^0.1.5"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
jupyterlab-code-formatter = "^2.2.1"
jupytext = "^1.15.2"
jupyterlab = "^3.0.0"
linkchecker = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# defines a workflow for cytomining ecosystem software landscape analysis
[tool.poe.tasks.cytomining_ecosystem_fall_2023]
# sets a cwd relative for the shell script below
cwd = "notebooks/cytomining-ecosystem"
# Defines workflow through sequence of python scripts converted from jupyter notebooks.
# Please ensure GOOGLE_APPLICATION_CREDENTIALS and LANDSCAPE_ANALYSIS_GH_TOKEN env variables
# are set within environment before running.
shell = """
  python seek-landscape-entries.py &&
  python project-github-metrics.py &&
  python gather-targeted-publication-mentions.py &&
  # install specialized version of pandas for condastats
  pip install -q "pandas>1.1,<1.4.0" || true
  # install specialized version of pandas for github-dependents-info
  pip install -q "pandas>=2.0.0,<3.0.0" || true
  python gather-targeted-package-metrics.py &&
  # install specialized version of pandas for ydata_profiling
  pip install -q "pandas>1.4.0,<2.1" || true
  python visualize-target-projects-fall-2023.py &&
  python visualize-landscape-fall-2023.py
"""

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 80
paths = ["notebooks"]
sort_by_size = true
verbose = true

[tool.isort]
profile = "black"

[tool.codespell]
# add capabilities for inline ignore for codespell linting
# referenced from: https://github.com/codespell-project/codespell/issues/1212
ignore-regex=".{1024}|.*codespell-ignore.*"
